fix: remove agent arg from TestConfig, add MasterArgs record